maybe better performance.

--- a/data_preparation.ipynb
+++ b/data_preparation.ipynb
@@ -649,17 +649,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ===== PART 2: YOLOv8 + ByteTrack Tracking Implementation =====\n",
+    "# ===== PART 4: YOLOv8 + ByteTrack Tracking Implementation =====\n",
     "\n",
     "from ultralytics import YOLO\n",
+    "import pandas as pd\n",
     "\n",
     "# Initialize YOLOv8 model (medium for better accuracy at distance)\n",
     "print(\"Loading YOLOv8 model...\")\n",
-    "model = YOLO('yolov8m.pt')  # Can also try yolov8l.pt for even better accuracy\n",
+    "model = YOLO('yolov8l.pt')  # Can also try yolov8l.pt for even better accuracy\n",
     "print(\"✓ YOLOv8 model loaded\")\n",
     "\n",
     "# Open input video\n",
-    "cap = cv2.VideoCapture(mp4_path)\n",
+    "cap = cv2.VideoCapture(mp4_path2)\n",
     "\n",
     "# Get video properties\n",
     "fps_input = cap.get(cv2.CAP_PROP_FPS)\n",
@@ -690,7 +691,7 @@
     "frame_idx = 0\n",
     "tracking_data = []\n",
     "\n",
-    "print(\"\\nProcessing video with YOLOv8 + ByteTrack...\")\n",
+    "print(\"\\nProcessing video with YOLOv8 + botsort...\")\n",
     "\n",
     "while cap.isOpened():\n",
     "    ret, frame = cap.read()\n",
@@ -699,19 +700,23 @@
     "    \n",
     "    frame_idx += 1\n",
     "    \n",
-    "    # Run YOLOv8 tracking (ByteTrack built-in)\n",
+    "    # Add padding to frame\n",
+    "    padded_frame, pad_size = expand_frame_for_detection(frame, padding_ratio=0.2)\n",
+    "    \n",
+    "    # Track on padded frame (remove pad, imgsz_test parameters)\n",
     "    results = model.track(\n",
-    "        source=frame,\n",
-    "        classes=[0],              # Only track people (class 0)\n",
-    "        conf=0.35,                # Lower confidence for better recall\n",
-    "        iou=0.7,                  # NMS IoU threshold\n",
-    "        tracker='bytetrack.yaml', # Use ByteTrack\n",
-    "        persist=True,             # Persist tracks across frames\n",
+    "        source=padded_frame,\n",
+    "        classes=[0],\n",
+    "        conf=0.01,\n",
+    "        iou=0.5,\n",
+    "        tracker='botsort.yaml',\n",
+    "        persist=True,\n",
     "        verbose=False,\n",
-    "        imgsz=640                 # Can increase to 1280 for small objects\n",
+    "        rect=False,\n",
+    "        imgsz=1280\n",
     "    )\n",
     "    \n",
-    "    # Extract tracking results\n",
+    "    # Extract tracking results and adjust coordinates\n",
     "    for result in results:\n",
     "        boxes = result.boxes\n",
     "        if boxes is not None and boxes.id is not None:\n",
@@ -719,26 +724,35 @@
     "                x1, y1, x2, y2 = box_coords.cpu().numpy()\n",
     "                track_id = int(track_id.cpu().numpy())\n",
     "                \n",
-    "                bb_left = int(x1)\n",
-    "                bb_top = int(y1)\n",
-    "                bb_width = int(x2 - x1)\n",
-    "                bb_height = int(y2 - y1)\n",
+    "                # IMPORTANT: Adjust coordinates back to original frame\n",
+    "                x1 = max(0, x1 - pad_size)\n",
+    "                y1 = max(0, y1 - pad_size)\n",
+    "                x2 = min(width, x2 - pad_size)\n",
+    "                y2 = min(height, y2 - pad_size)\n",
     "                \n",
-    "                # Save tracking result\n",
-    "                tracking_file.write(f\"{frame_idx},{track_id},{bb_left},{bb_top},{bb_width},{bb_height}\\n\")\n",
-    "                tracking_data.append([frame_idx, track_id, bb_left, bb_top, bb_width, bb_height])\n",
-    "                \n",
-    "                # Draw on frame\n",
-    "                cv2.rectangle(frame, (int(x1), int(y1)), (int(x2), int(y2)), (0, 255, 0), 2)\n",
-    "                \n",
-    "                label = f'ID: {track_id}'\n",
-    "                label_size, _ = cv2.getTextSize(label, cv2.FONT_HERSHEY_SIMPLEX, 0.6, 2)\n",
-    "                label_y = max(int(y1) - 10, label_size[1] + 10)\n",
-    "                \n",
-    "                cv2.rectangle(frame, (int(x1), label_y - label_size[1] - 10), \n",
-    "                             (int(x1) + label_size[0], label_y), (0, 255, 0), -1)\n",
-    "                cv2.putText(frame, label, (int(x1), label_y - 5), \n",
-    "                           cv2.FONT_HERSHEY_SIMPLEX, 0.6, (0, 0, 0), 2)\n",
+    "                # Only save if box is still valid\n",
+    "                if x2 > x1 and y2 > y1:\n",
+    "                    \n",
+    "                    bb_left = int(x1)\n",
+    "                    bb_top = int(y1)\n",
+    "                    bb_width = int(x2 - x1)\n",
+    "                    bb_height = int(y2 - y1)\n",
+    "                    \n",
+    "                    # Save tracking result\n",
+    "                    tracking_file.write(f\"{frame_idx},{track_id},{bb_left},{bb_top},{bb_width},{bb_height}\\n\")\n",
+    "                    tracking_data.append([frame_idx, track_id, bb_left, bb_top, bb_width, bb_height])\n",
+    "                    \n",
+    "                    # Draw on frame\n",
+    "                    cv2.rectangle(frame, (int(x1), int(y1)), (int(x2), int(y2)), (0, 255, 0), 2)\n",
+    "                    \n",
+    "                    label = f'ID: {track_id}'\n",
+    "                    label_size, _ = cv2.getTextSize(label, cv2.FONT_HERSHEY_SIMPLEX, 0.6, 2)\n",
+    "                    label_y = max(int(y1) - 10, label_size[1] + 10)\n",
+    "                    \n",
+    "                    cv2.rectangle(frame, (int(x1), label_y - label_size[1] - 10), \n",
+    "                                (int(x1) + label_size[0], label_y), (0, 255, 0), -1)\n",
+    "                    cv2.putText(frame, label, (int(x1), label_y - 5), \n",
+    "                            cv2.FONT_HERSHEY_SIMPLEX, 0.6, (0, 0, 0), 2)\n",
     "    \n",
     "    # Add frame number\n",
     "    cv2.putText(frame, f'Frame: {frame_idx}/{total_frames}', (10, 30), \n",
@@ -746,7 +760,7 @@
     "    \n",
     "    out.write(frame)\n",
     "    \n",
-    "    if frame_idx % 50 == 0:\n",
+    "    if frame_idx % 200 == 0:\n",
     "        print(f\"  Processed frame {frame_idx}/{total_frames} ({frame_idx/total_frames*100:.1f}%)\")\n",
     "\n",
     "cap.release()\n",
@@ -757,7 +771,57 @@
     "print(f\"Output video: {output_path}\")\n",
     "print(f\"Tracking results: {tracking_results_path}\")\n",
     "print(f\"Total frames processed: {frame_idx}\")\n",
-    "print(f\"Total tracked detections: {len(tracking_data)}\")"
+    "print(f\"Total tracked detections: {len(tracking_data)}\")\n",
+    "\n",
+    "def expand_frame_for_detection(frame, padding_ratio=0.2):\n",
+    "    \"\"\"\n",
+    "    Add padding to frame edges to help detect people at corners\n",
+    "    Returns padded frame and padding size\n",
+    "    \"\"\"\n",
+    "    h, w = frame.shape[:2]\n",
+    "    pad_size = int(max(h, w) * padding_ratio)\n",
+    "    \n",
+    "    # Add padding (mirror edges for better edge detection)\n",
+    "    padded = cv2.copyMakeBorder(\n",
+    "        frame, \n",
+    "        pad_size, pad_size, pad_size, pad_size,\n",
+    "        cv2.BORDER_REFLECT_101  # Mirror edges\n",
+    "    )\n",
+    "    return padded, pad_size\n",
+    "\n",
+    "def interpolate_missing_tracks(tracking_data, max_gap=5):\n",
+    "    \"\"\"Fill short gaps in tracks with linear interpolation\"\"\"\n",
+    "    df = pd.DataFrame(tracking_data, columns=['frame', 'id', 'bb_left', 'bb_top', 'bb_width', 'bb_height'])\n",
+    "    \n",
+    "    filled_data = []\n",
+    "    \n",
+    "    for track_id in df['id'].unique():\n",
+    "        track_df = df[df['id'] == track_id].sort_values('frame')\n",
+    "        \n",
+    "        # Find gaps\n",
+    "        frames = track_df['frame'].values\n",
+    "        for i in range(len(frames) - 1):\n",
+    "            # Add current detection\n",
+    "            filled_data.append(track_df.iloc[i].tolist())\n",
+    "            \n",
+    "            gap = frames[i+1] - frames[i]\n",
+    "            # If gap is small, interpolate\n",
+    "            if 1 < gap <= max_gap:\n",
+    "                start_box = track_df.iloc[i][['bb_left', 'bb_top', 'bb_width', 'bb_height']].values\n",
+    "                end_box = track_df.iloc[i+1][['bb_left', 'bb_top', 'bb_width', 'bb_height']].values\n",
+    "                \n",
+    "                for gap_frame in range(frames[i] + 1, frames[i+1]):\n",
+    "                    # Linear interpolation\n",
+    "                    alpha = (gap_frame - frames[i]) / gap\n",
+    "                    interp_box = start_box + alpha * (end_box - start_box)\n",
+    "                    filled_data.append([gap_frame, track_id] + interp_box.astype(int).tolist())\n",
+    "        \n",
+    "        # Add last detection\n",
+    "        if len(track_df) > 0:\n",
+    "            filled_data.append(track_df.iloc[-1].tolist())\n",
+    "    \n",
+    "    return sorted(filled_data, key=lambda x: (x[0], x[1]))\n",
+    "\n"
    ]
   }
  ],
